<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/detail_event_image"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/event_image_desc"
                android:layout_marginBottom="16dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/detail_event_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/detail_event_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingBottom="8dp"
                android:text="@string/event_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/detail_event_owner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/detail_event_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_vertical"
                android:text="@string/event_organizer" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/detail_event_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/detail_event_owner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_vertical"
                android:text="@string/event_time" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/detail_event_quota"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/detail_event_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_vertical"
                android:text="@string/event_quota" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/detail_event_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/detail_event_quota"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:lineSpacingExtra="4dp"
                android:paddingTop="16dp"
                android:text="@string/event_description" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_open_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_event_link"
                android:icon="@drawable/ic_launcher_foreground"
                android:backgroundTint="@color/purple_700"
                app:layout_constraintTop_toBottomOf="@+id/detail_event_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/loading_indicator"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</com.google.android.material.card.MaterialCardView>
